--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Franco Bonaviri",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/mysql": "^2.15.16",
     "nodemon": "^2.0.6"
   }
 }
